# ProjectCmta

./: CMakeLists.txt  CprojectMta.sln  README.md
CprojectMta/: 3  CprojectMta.vcxproj  CprojectMta.vcxproj.filters  FindAllPossiblePaths.c  FindAllPossiblePaths.h  Game.h  GameFn.c  Menu.c  Menu.h  Position.c  Position.h  PositionList.c  TreePath.c  TreePath.h  findAllPathsSortedPrices.c  findAllPathsSortedPrices.h  findTheCheapestPath.c  findTheCheapestPath.h  main.c  main.h  makefile  menu.c
CprojectMta/FindCheapestPathList/: FindCheapestPathList.c  FindCheapestPathList.h
CprojectMta/GreedyCheapPath/: GreedyCheapPath.c
CprojectMta/LoadBoardFromBinFile/: LoadBoardFromBinFile.c  LoadBoardFromBinFile.h
CprojectMta/Menu/: Menu.c  Menu.h
CprojectMta/PositionList/: PositionList.c  PositionList.h
CprojectMta/findAllPathsSortedPrices/: findAllPathsSortedPrices.c  findAllPathsSortedPrices.h
CprojectMta/findAllPosiblePaths/: FindAllPossiblePaths.c  FindAllPossiblePaths.h
CprojectMta/findTheCheapestPath/: findTheCheapestPath.c  findTheCheapestPath.h
CprojectMta/greedyCheapPath/: GreedyCheapPath.c  GreedyCheapPath.h
CprojectMta/streamIo/: StreamIo.c  StreamIo.h
FindCheapestPathList/: FindCheapestPathList.c  FindCheapestPathList.h
